datasets/dataset_txt/certbot/certbot_2073.txt
profhase commented on 22 May 2016
Problem
Trying to install letsencrypt with pip3
pip3 install letsencrypt
I am constantly getting:
...
Downloading/unpacking python2-pythondialog>=3.2.2rc1 (from certbot->letsencrypt)
Downloading python2-pythondialog-3.4.0.tar.gz (1.5MB): 1.5MB downloaded
Running setup.py (path:/tmp/pip-build-kucg1yr1/python2-pythondialog/setup.py) egg_info for package python2-pythondialog
Traceback (most recent call last):
File "", line 17, in
File "/tmp/pip-build-kucg1yr1/python2-pythondialog/setup.py", line 32, in
from dialog import version as VERSION
File "/tmp/pip-build-kucg1yr1/python2-pythondialog/dialog.py", line 264
except OSError, e:
^
SyntaxError: invalid syntax
Complete output from command python setup.py egg_info:
Traceback (most recent call last):
File "", line 17, in
File "/tmp/pip-build-kucg1yr1/python2-pythondialog/setup.py", line 32, in
from dialog import __version__ as VERSION
File "/tmp/pip-build-kucg1yr1/python2-pythondialog/dialog.py", line 264
except OSError, e:
(Which seems that there is a false dependency on python2-pythondialog).
Workaround
use pip2